OEL-1995: Add new parameter image_size to content banner pattern.

--- a/templates/patterns/content_banner/pattern-content-banner.html.twig
+++ b/templates/patterns/content_banner/pattern-content-banner.html.twig
@@ -36,6 +36,7 @@
     'path': image.src,
     'alt': image.alt,
   } : {},
+  'image_size': image_size ?? 'lg',
   'badges': _badges,
   'links': links,
   'attributes': attributes,
