OEL-1995: Add new default responsive breakpoint for offcanvas and update search variant.

--- a/templates/patterns/offcanvas/pattern-offcanvas.html.twig
+++ b/templates/patterns/offcanvas/pattern-offcanvas.html.twig
@@ -13,6 +13,7 @@
   'with_body_scroll': body_scroll,
   'with_backdrop': backdrop,
   'attributes': attributes,
+  'responsiveness': 'lg'
 } only %}
 {% endblock %}
 
