--- a/templates/patterns/offcanvas/pattern-offcanvas--variant-search.html.twig
+++ b/templates/patterns/offcanvas/pattern-offcanvas--variant-search.html.twig
@@ -14,10 +14,11 @@
     'body': body,
     'with_body_scroll': body_scroll,
     'with_backdrop': backdrop,
-    'extra_classes_body': 'bcl-offcanvas p-lg-0',
+    'extra_classes_body': 'bcl-offcanvas p-lg-0 d-block',
     'extra_classes_close': "d-lg-none",
-    'extra_classes_header': "p-lg-0",
+    'extra_classes_header': "p-lg-0 d-lg-block",
     'attributes': attributes.addClass('bcl-offcanvas'),
+    'responsiveness': 'lg'
   } only %}
 {% endblock %}
 {% block toggle_button %}
